--- a/applications.html
+++ b/applications.html
@@ -1,62 +1,65 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!doctype html>
+	<html lang="en">
+	  <head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-	
-	<button id="showArticles">Show Articles</button>
-	
-	<div id="div1">
+		<title>Hello, world!</title>
+	  </head>
+	  <body>
+		<h1>Hello, world!</h1>
 		
-	</div>
+		<button id="showArticles">Show Articles</button>
+		
+		<div id="div1">
+			
+		</div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script
-  src="https://code.jquery.com/jquery-3.4.0.min.js"
-  integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
-  crossorigin="anonymous"></script>
-  <!-- custom js -->
-  
-  <script>
-  $(document).ready(function(){
-  
-	
-	
-	
-	
-	$("#showArticles").click(function(){
-		var settings = {
-		  "async": true,
-		  "crossDomain": true,
-		  "url": "https://lww.azure-api.net/ejournals/TOCArticleListByIssueTypeAndJournalShortName?issueType=CurrentIssue&journalShortname=plasreconsurg",
-		  "method": "GET",
-		  "headers": {
-			"ocp-apim-subscription-key": "ddc380316f8e47b88d11f5802fe9c0eb",
-			"cache-control": "no-cache",
-			"postman-token": "e0be8c6c-9c03-84e5-bd2c-bb28ae8beafc"
-		  }
-		}
-
-		$.ajax(settings).done(function (response) {
-		  console.log(response);
+		<!-- Optional JavaScript -->
+		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	  <script
+	  src="https://code.jquery.com/jquery-3.4.0.min.js"
+	  integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+	  crossorigin="anonymous"></script>
+	  <!-- custom js -->
+	  
+	  <script>
+	  $(document).ready(function(){
+	  
+		
+		
+		$("#showArticles").click(function(){
+			$.ajax({
+			  crossDomain: true,
+			  method: 'GET',
+			  url: "https://lww.azure-api.net/ejournals/TOCArticleListByIssueTypeAndJournalShortName",
+			     dataType: 'json',
+				data: {
+			  issueType: 'CurrentIssue',
+			  journalShortname: 'plasreconsurg'
+			  },
+				dataType: "json",	
+			  headers: {
+				"ocp-apim-subscription-key": "ddc380316f8e47b88d11f5802fe9c0eb",
+				"accept": "application/json",
+				"Access-Control-Allow-Origin":"*",
+				"Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept"
+			  },
+			  success: function(data){
+			  console.log(data)
+			  }
+			})
 		});
-	});
-  });
-  
-  </script>
-  
-  </body>
-</html>
+	  });
+	  
+	  </script>
+	  
+	  </body>
+	</html>
